# gemini

./: .env.example  .gitignore  .pre-commit-config.yaml  CIRCULAR_BADGE_ENHANCEMENT.md  COMPREHENSIVE_DESIGN_ENHANCEMENT.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LAYOUT_COLORFUL_DROPDOWN_IMPROVEMENTS.md  LAYOUT_SHIFT_FIX.md  README-DEVCONTAINER.md  README.md  TASKS_DROPDOWN_ENHANCEMENT.md  VISUAL_ENHANCEMENT_SUMMARY.md  comprehensive_test.py  debug_redis.py  debug_upload.py  monitor_task.py  package-lock.json  package.json  pyproject.toml  quick_test.py  run_tests.py  start.sh  tailwind.config.js  test_circular_badges.py  test_document.txt  test_dropdown_enhancement.py  test_layout_improvements.py  test_layout_shift_fix.py  test_theme_detection.html  validate_tests.py
.devcontainer/: Dockerfile  devcontainer-simple.json  devcontainer.json  post-create.sh  setup-git.sh
.github/: copilot-instructions.md
app/: config.py  main.py  requirements.txt  services.py  tasks.py  utils.py
app/static/: input.css  output.css
app/templates/: index.html  result.html
tests/: README.md  __init__.py  conftest.py  create_simple_test_image.py  monitor_task.py  simple_test.py  test_advanced.py  test_api.py  test_app.py  test_document.txt  test_edge_cases.py  test_improvements.py  test_integration.py  test_performance.py
