[project]
name = "gemini-cli-app"
version = "0.1.0"
description = "Gemini CLI FastAPI application"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "google-genai",
    "werkzeug",
    "Pillow",
    "python-magic",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "fastapi-limiter",
    "redis",
    "ruff",
    "jinja2",
    "celery",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
where = ["app"]
